--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,7 @@ header i{
     background-color: #fafafa;
 }
     /*error Message*/
-    #errorTextMsg{
+    .errorTextMsg{
         color: red;
     }
 
