Formular funktioniert. Email noch nicht. (ohne Classes)

--- a/css/style.css
+++ b/css/style.css
@@ -390,9 +390,10 @@ header i{
     background-color: #fafafa;
 }
     /*error Message*/
-    .errorTextMsg{
+    #errorTextMsg{
         color: red;
     }
+    /*
 
 /* footer */
 footer .link{
